2000-05-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 11530: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: add -E option
 	to zparseopts
	
	* 11525: Completion/Base/_arguments, Completion/Commands/_complete_help,
 	Completion/Commands/_next_tags, Completion/Core/_description,
 	Completion/Core/_next_label: use `set -A' instead of `eval' in
 	more places
	
	* 11524: Src/builtin.c: fix for read -q without a shout
	
	* 11523: Src/hist.c, Src/init.c, Src/lex.c, Src/zsh.h, Src/Zle/zle.h,
 	Src/Zle/zle_main.c, Src/Zle/zle_tricky.c: save and restore more
 	variables in bufferwords(); move gotword() into core
	
2000-05-22  Oliver Kiddle  <opk@zsh.org>

	* 11517: Completion/Core/_next_label: don't lose empty arguments

2000-05-22  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11516: Completion/Core/compinstall: select=long-list can
	be combined with select=some number.

2000-05-22  Bart Schaefer  <schaefer@zsh.org>

	* 11515: Completion/Base/_arguments: Fix infinite loop.

	* 11508: Doc/Zsh/index.yo: Add texipage() to printindex().

	* 11485, 11488: Relocate "Compatibility" and "Restricted Shell" docs.

2000-05-22  Chmouel Boudjnah  <chmouel@mandrakesoft.com>

	* 11501: Completion/Linux/_rpm: --buildarch is like --target.

2000-05-22  Sven Wischnowsky  <wischnow@zsh.org>

	* 11503: Src/Zle/zle_tricky.c: make sure wouldinstab is set before
 	calling docomplete()
	
	* 11500: Completion/Core/_main_complete: another fix for
 	`select=long*' in menu style
	
	* 11497: Completion/Core/_main_complete: fix for select-long-list
 	in menu style
	
	* 11496: Src/Zle/compmatch.c: fix for clines in suffix
	
	* 11493: Completion/Core/_main_complete, Doc/Zsh/compwid.yo,
 	Src/Zle/compcore.c, Src/Zle/zle_tricky.c: be more careful when
 	decided if to insert tabs instead of completing
	
	* 11490: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: remove -h
 	option from zstyle
	
	* 11489: Completion/Base/_arguments, Doc/Zsh/compsys.yo,